# votechess-bot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  compile.sh  env.sh  setup-standalone.sh  setup.sh  vcpkg-packages.txt
src/main/votechess/: config_service.cpp  config_service.h  irc_client.cpp  irc_client.h  main.cpp  rng_service.cpp  rng_service.h  uci_service_wrapper.cpp  uci_service_wrapper.h  vote_service.cpp  vote_service.h
